[tool.poetry]
name = "platfus_1"
version = "0.1.0"
description = ""
authors = ["jarczan kurczan solutions <ensewion@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
