[tool.poetry]
name = "platfus_1"
version = "0.1.0"
description = ""
authors = ["jarczan kurczan solutions <ensewion@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.1"
black = "^21.9b0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pycodestyle = "^2.7.0"
flake8 = "^3.9.2"
pylint = "^2.11.1"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
